--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Flask-Migrate==4.0.0
 flask-sqlalchemy==3.0.0
 greenlet==2.0.2
 gunicorn==21.2.0
-importlib-metadata==6.8.0
+importlib-metadata
 importlib-resources==6.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
